All kind of minor modifications

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,11 +37,11 @@ jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${libs.htmlUnit.classpath}:\
+    ${libs.htmlUnit-2.19.classpath}:\
     ${file.reference.jna-platform-4.1.0.jar}:\
     ${file.reference.jna-4.1.0.jar}
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=-Xlint:unchecked
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
